--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,21 @@
 
   <body>
       <main>
-        <h1 id="title">X-ercise</h1>
+        <div class="app-name">
+          <h1 id="title">X-ercise</h1>
+        </div>
+        <article class="newForm">
+          <form id="workout-form">
+            <b>Create New Workout</b>
+            <br>
+            <label for="title">Title:</label>
+            <input type="text" id="title" name="title"/>
+            <p>
+              <button type="submit">Create Workout</button>
+            </p>
+          </form>
+        </article>
+
         <article id="workout-container">
             <h1>Workouts</h1>
             <section id="workout-list">
