create new workout, save and render

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,7 @@
           <form id="workout-form">
             <b>Create New Workout</b>
             <br>
-            <label for="title">Title:</label>
+            <label for="workout-title">Title:</label>
             <input type="text" id="title" name="title"/>
             <p>
               <button type="submit">Create Workout</button>
