render new Set form and align

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,6 +13,7 @@
       <main>
         <div class="app-name">
           <h1 id="title">X-ercise</h1>
+          <p>Workout Logger</p>
         </div>
         <article class="newForm">
           <form id="workout-form">
