added back muscle group to exercise

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,13 +37,15 @@
           </form>
         </article>
 
+        <article class="sort">
+          
+        </article>
+
         <article id="workout-container">
             <h1>Workouts</h1>
             <section id="workout-list">
-                
             </section>
         </article>
-
       </main>
 
     <script src="src/WorkoutServices.js"></script>
