added a drop-down list containing all muscle groups, will be used for sorting workouts

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,8 +37,8 @@
           </form>
         </article>
 
-        <article class="sort">
-          
+        <article class="sort" name="sort" id="sort">
+          <label for="sort"> Muscle Group</label>
         </article>
 
         <article id="workout-container">
